# rust-red

./: Cargo.toml  README.md  build.rs
.github/: CONTRIBUTING.md
.github/workflows/: CICD.yml  ci.yml
benchmarks/: bench_common.rs  memory.rs  startup.rs  throughput.rs  wasm_overhead.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: api.rs  bridge.rs  gossip.rs  lib.rs  partition.rs  sync.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/runtime/: audit.rs  engine.rs  flow.rs  jsonata.rs  telemetry.rs
crates/core/src/runtime/ai/: config.rs  context.rs  provider.rs
crates/core/src/runtime/context/: localfs.rs  memory.rs  mod.rs
crates/core/src/runtime/model/json/: deser.rs
crates/core/src/runtime/model/variant/: mod.rs
crates/core/src/runtime/nodes/: mod.rs
crates/core/src/runtime/nodes/common_nodes/: dashboard_data.rs  global_config.rs  group.rs  link_call.rs  unknown.rs
crates/core/src/runtime/nodes/db_nodes/: influxdb_config.rs  influxdb_in.rs  influxdb_out.rs  mssql_config.rs  mssql_query.rs  timescaledb_config.rs  timescaledb_query.rs
crates/core/src/runtime/nodes/db_nodes/postgres/: postgres_config.rs  postgres_query.rs
crates/core/src/runtime/nodes/db_nodes/sqlite/: sqlite_config.rs  sqlite_query.rs
crates/core/src/runtime/nodes/function_nodes/: template.rs
crates/core/src/runtime/nodes/function_nodes/function/: mod.rs  node_class.rs
crates/core/src/runtime/nodes/function_nodes/trigger/: mod.rs
crates/core/src/runtime/nodes/industrial_nodes/: bacnet_config.rs  bacnet_read.rs  bacnet_write.rs  mod.rs  modbus_config.rs  modbus_flex_getter.rs  modbus_flex_writer.rs  modbus_queue.rs  modbus_read.rs  modbus_server.rs  modbus_write.rs  opcua_config.rs  opcua_read.rs  opcua_write.rs
crates/core/src/runtime/nodes/network_nodes/: mqtt_broker.rs  mqtt_broker_embedded.rs  mqtt_in.rs  mqtt_out.rs  tcp_in.rs  tcp_out.rs  udp_in.rs  udp_out.rs  websocket_client.rs
crates/core/src/runtime/nodes/parser_nodes/: html.rs
crates/core/src/web/: frontend_plugin.rs
crates/core/tests/nodered_compat/: flow_builder.rs  harness.rs  mod.rs  test_bacnet.rs  test_batch.rs  test_catch.rs  test_change.rs  test_comment.rs  test_csv.rs  test_debug.rs  test_delay.rs  test_file.rs  test_flow_import.rs  test_function.rs  test_html.rs  test_http_request.rs  test_influxdb.rs  test_inject.rs  test_json.rs  test_link.rs  test_modbus.rs  test_mqtt.rs  test_mqtt_broker.rs  test_mqtt_flow.rs  test_mssql.rs  test_opcua.rs  test_postgres.rs  test_range.rs  test_rbe.rs  test_sort.rs  test_split_join.rs  test_sqlite.rs  test_switch.rs  test_tcp.rs  test_template.rs  test_timescaledb.rs  test_trigger.rs  test_udp.rs  test_watch.rs  test_websocket.rs  (+2 more)
crates/marketplace/src/: api.rs  error.rs  store.rs  verify.rs
crates/mqtt-broker/src/: config.rs
crates/mqtt-broker/src/api/: mod.rs  models.rs
crates/mqtt-broker/src/broker/: mod.rs  retained.rs  session.rs  subscription.rs
crates/mqtt-broker/src/persistence/: memory.rs
crates/mqtt-broker/src/protocol/: codec.rs
crates/mqtt-broker/tests/: integration_test.rs
crates/pymod/: Cargo.toml
crates/wasm-host/src/: abi.rs  memory.rs  plugin_manager.rs  shim.rs  state.rs
crates/wasm-sdk/src/: types.rs
crates/web/public/: index.html
crates/web/src/: api.rs  api_tests.rs  versioning.rs
crates/web/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  roles.rs  users.rs
crates/web/src/handlers/: ai.rs  comms.rs  context.rs  dashboard.rs  flows.rs  frontend_plugins.rs  nodes.rs
crates/web/src/security/: audit_middleware.rs  headers.rs  rate_limit.rs
docs/: SECURITY.md
plugins/examples/echo/src/: lib.rs
plugins/examples/transform/src/: lib.rs
scripts/: dist-pack.py  load-pymod-test.py
src/: app.rs  cliargs.rs  env.rs  registry.rs  runner.rs
tests/: __init__.py  cluster_integration.rs
