[package]
name = "rust-red"
version = "0.1.99"
edition = "2021"
rust-version = "1.77.2"
readme = "README.md"
homepage = "https://github.com/dzulfikar08/rust-red"
description = "Rust-Red is a Node-RED compatible run-time engine in Rust."
build = "build.rs"
license = "Apache 2.0"
authors = ["Dzulfikar Ats Tsauri"]


[[bin]]
name = "rust-red"
path = "src/main.rs"

[[bench]]
name = "throughput"
path = "benchmarks/throughput.rs"
harness = false

[[bench]]
name = "memory"
path = "benchmarks/memory.rs"
harness = false

[[bench]]
name = "startup"
path = "benchmarks/startup.rs"
harness = false

[[bench]]
name = "wasm_overhead"
path = "benchmarks/wasm_overhead.rs"
harness = false


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 0

[profile.ci]
inherits = "release"
debug = false
incremental = false

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
strip = true      # Automatically strip symbols from the binary.

[profile.test]
opt-level = 1 # Enables thin local LTO and some optimizations.

[workspace.dependencies]
bincode = { version = "^2.0", features = ["serde"] }
async-trait = "0.1"
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
tokio = "1"
tokio-util = "0.7"
semver = "1"
config = { version = "^0.15", default-features = false, features = [
    "convert-case",
    "toml",
] }
once_cell = { version = "1" }
serde = { version = "1" }
serde_json = "1"
serde_with = "3"
dashmap = { version = "6", features = ["serde"] }
rand = "0.9.1"
base64 = "0.22"
bytes = { version = "1", features = ["std", "serde"] }
chrono = "0.4"
regex = "1"
thiserror = "2"
nom = "^8.0"
tokio-cron-scheduler = "^0.14"
bumpalo = "3"
jsonata-rs = "0.3"
dirs-next = "2"
clap = { version = "4", features = ["derive"] }
itertools = "^0.14"
arrayvec = "0.7"
smallvec = "1"
smallstr = { version = "0.3", features = ["serde", "std", "union"] }
inventory = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
futures-util = "0.3"
rquickjs = { version = "0.9", features = [
    "chrono",
    "loader",
    "allocator",
    "either",
    "classes",
    "properties",
    "array-buffer",
    "macro",
    "futures",
    "parallel",
] }
#llrt_modules = { git = "https://github.com/awslabs/llrt.git", default-features = false, package = "llrt_modules", features = ["buffer", "timers"]}
rquickjs-extra = { version = "0.1", default-features = false, features = [
    "timers",
    "console",
] }
log4rs = { version = "1", features = [
    "console_appender",
    "file_appender",
    "rolling_file_appender",
    "compound_policy",
    "delete_roller",
    "fixed_window_roller",
    "size_trigger",
    "time_trigger",
    #    "json_encoder",
    "pattern_encoder",
    "threshold_filter",
    "config_parsing",
    "toml_format",
], default-features = false }
ctor = "^0.2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
tokio-tungstenite = { version = "0.26.2", features = [
    "rustls-tls-native-roots",
] }
serde-xml-rs = { version = "0.8.1" }
quick-xml = { version = "0.36", features = ["serialize"] }
axum = { version = "0.8.4", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "ws",
    "tokio",
    "ws",
    "query",
    "multipart",
] }
rumqttc = { version = "0.24" }
wasmtime = { version = "45", features = ["async", "cranelift"] }
rmp-serde = "1"
postcard = { version = "1", features = ["alloc"] }
notify = "8"
opentelemetry = "0.29"
opentelemetry_sdk = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
tokio-modbus = { version = "0.17", features = ["tcp-server"] }
tokio-serial = "5.4"
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }

[dependencies]
clap.workspace = true
dirs-next.workspace = true
anyhow.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["signal"] }
tokio-util.workspace = true
config.workspace = true
semver.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
log4rs.workspace = true
async-trait.workspace = true
once_cell.workspace = true

rust-red-core = { path = "crates/core", default-features = false }

# Node plug-ins:
rust-red-nodes-dummy = { path = "node-plugins/rust-red-nodes-dummy" }

rust-red-web = { path = "crates/web", default-features = true }
rust-red-wasm-host = { path = "crates/wasm-host", optional = true }
rust-red-mqtt-broker = { path = "crates/mqtt-broker", optional = true }
rust-red-cluster = { path = "crates/cluster", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "sync",
] }
rust-red-core = { path = "crates/core" }
postcard = { workspace = true }
ctor.workspace = true
log4rs.workspace = true
log.workspace = true
dashmap.workspace = true

[build-dependencies]
chrono = { workspace = true }

[workspace]
members = [
    "crates/core",
    "crates/macro",
    "crates/web",
    "crates/wasm-host",
    "crates/wasm-sdk",
    "crates/marketplace",
    "crates/mqtt-broker",
    "crates/cluster",
    "node-plugins/*",
    "plugins/examples/*",
]
exclude = ["crates/pymod"]

[package.metadata.bundle]
identifier = "com.github.dzulfikar08.rust-red"

[features]
full = ["default", "rqjs_bindgen", "wasm_plugins", "cluster"]
default = ["core", "js", "nodes_network", "nodes_storage", "nodes_postgres", "nodes_sqlite", "nodes_influxdb", "nodes_modbus", "nodes_opcua", "nodes_bacnet", "nodes_timescaledb", "nodes_mssql"]
core = ["rust-red-core/core"]
js = ["rust-red-core/js"]
nodes_network = ["rust-red-core/nodes_network"]
nodes_storage = ["rust-red-core/nodes_storage"]
rqjs_bindgen = ["js", "rust-red-core/rqjs_bindgen"]
otel = ["rust-red-core/otel", "rust-red-web/otel"]
wasm_plugins = ["dep:rust-red-wasm-host"]
mqtt_broker = ["dep:rust-red-mqtt-broker"]
cluster = ["dep:rust-red-cluster", "rust-red-core/cluster", "rust-red-web/cluster"]
nodes_postgres = ["rust-red-core/nodes_postgres"]
nodes_timescaledb = ["rust-red-core/nodes_timescaledb"]
nodes_mssql = ["rust-red-core/nodes_mssql"]
nodes_modbus = ["rust-red-core/nodes_modbus"]
nodes_opcua = ["rust-red-core/nodes_opcua"]
nodes_bacnet = ["rust-red-core/nodes_bacnet"]
nodes_influxdb = ["rust-red-core/nodes_influxdb"]
nodes_sqlite = ["rust-red-core/nodes_sqlite"]
ai = ["rust-red-core/ai", "rust-red-web/ai"]
