[package]
name = "rust-red-pymod"
version = "0.1.99"
edition = "2024"

[lib]
name = "rust_red_pymod"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "^0.20", features = ["tokio-runtime"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
log4rs.workspace = true
log.workspace = true

rust-red-core = { path = "../../crates/core", default-features = true, features = [
    "pymod", "default"
] }
# Node plug-ins:
rust-red-nodes-dummy = { path = "../../node-plugins/rust-red-nodes-dummy" }
